new_tests/semantics/scope/bad/024_PD2.cm

class A<discr t> {
    public method check(in a:Int) => Void {}
    public method print(in t:Int) => Void {}
}
